Fix tag positioning on safari

--- a/timeweb/timewebapp/static/timewebapp/css/app.css
+++ b/timeweb/timewebapp/static/timewebapp/css/app.css
@@ -406,8 +406,8 @@ header.animate::after {
 }
 .tag-wrapper {
     position: relative;
-    display: inline-block;
-    vertical-align: top;
+    display: inline-flex;
+    align-items: center;
     padding: 0 5px;
     border: 1px solid var(--color);
     border-radius: 10px;
@@ -434,7 +434,6 @@ header.animate::after {
     position: absolute;
     width: 9px;
     height: 9px;
-    top: 3px;
     right: 3px;
     border-radius: 50%;
     background-color: var(--color);
